<resources>
    <string name="app_name">Chat Page</string>
    <string name="more_info">More info</string>
    <string name="submit">Submit</string>
    <string name="selected_mood">Selected Mood :</string>
    <string name="history">History</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="send">Send</string>
    <string name="logout">Logout</string>
</resources>